--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.2",
+    "@lottiefiles/react-lottie-player": "^3.5.3",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-checkbox": "^1.0.4",
@@ -33,12 +34,14 @@
     "clsx": "^2.0.0",
     "cmdk": "^0.2.0",
     "generate-password": "^1.7.1",
+    "lodash": "^4.17.21",
     "mongodb": "^6.2.0",
     "mongoose": "^8.0.0",
     "next": "14.0.2",
     "next-themes": "^0.2.1",
     "react": "^18",
     "react-dom": "^18",
+    "react-gauge-component": "^1.1.30",
     "react-hook-form": "^7.48.2",
     "tailwind-merge": "^2.0.0",
     "tailwindcss-animate": "^1.0.7",
