Attempting to Implement Authentication

--- a/package.json
+++ b/package.json
@@ -26,18 +26,21 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.5",
     "@radix-ui/react-tooltip": "^1.0.7",
+    "@types/bcrypt": "^5.0.2",
     "@zxcvbn-ts/core": "^3.0.4",
     "@zxcvbn-ts/language-common": "^3.0.4",
     "@zxcvbn-ts/language-en": "^3.0.2",
     "@zxcvbn-ts/matcher-pwned": "^3.0.4",
+    "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "cmdk": "^0.2.0",
     "generate-password": "^1.7.1",
     "lodash": "^4.17.21",
-    "mongodb": "^6.2.0",
+    "mongodb": "^6.3.0",
     "mongoose": "^8.0.0",
     "next": "14.0.2",
+    "next-auth": "^5.0.0-beta.4",
     "next-themes": "^0.2.1",
     "react": "^18",
     "react-dom": "^18",
